--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,18 @@
     "homepage": "https://github.com/synergitech/laravel-postal",
     "license": "MIT",
     "require": {
-        "php": ">=7.0.0",
-        "laravel/framework": ">=5.5.0",
+        "php": ">=7.1.0",
+        "laravel/framework": ">=5.6.0",
         "postal/postal": "1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5",
+        "orchestra/testbench": "^3.5"
     },
     "autoload": {
         "psr-4": {
-            "SynergiTech\\Postal\\": "src"
+            "SynergiTech\\Postal\\": "src",
+            "SynergiTech\\Postal\\Tests\\": "tests"
         }
     },
     "extra": {
