--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ php:
   - '7.2'
   - '7.3'
   - '7.4'
+  - 'nightly'
+
+jobs:
+  allow_failures:
+    - php: 'nightly'
 
 before_script:
   - travis_retry composer self-update
