--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "license": "MIT",
     "require": {
         "php": ">=7.1.0",
-        "laravel/framework": ">=5.6.0",
-        "postal/postal": "1.0"
+        "laravel/framework": "^7.0",
+        "postal/postal": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5",
-        "orchestra/testbench": "^3.5"
+        "phpunit/phpunit": "^9.0",
+        "orchestra/testbench": "^5.1"
     },
     "autoload": {
         "psr-4": {
