--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "homepage": "https://github.com/synergitech/laravel-postal",
     "license": "MIT",
     "require": {
-        "php": ">=7.1.0",
+        "php": "^7.3",
         "laravel/framework": "^7.0",
         "postal/postal": "^1.0"
     },
