--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
     "homepage": "https://github.com/synergitech/laravel-postal",
     "license": "MIT",
     "require": {
-        "php": ">=7.1.0",
-        "laravel/framework": "^5.6 || ^6.0",
-        "postal/postal": "1.0"
+        "php": "^7.3",
+        "laravel/framework": "^7.0",
+        "postal/postal": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5",
-        "orchestra/testbench": "^3.5"
+        "phpunit/phpunit": "^9.0",
+        "orchestra/testbench": "^5.1"
     },
     "autoload": {
         "psr-4": {
