--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: php
 
+env:
+  - LARAVEL=7
+  - LARAVEL=8
+
 php:
   - '7.3'
   - '7.4'
@@ -11,7 +15,7 @@ jobs:
 
 before_script:
   - travis_retry composer self-update
-  - travis_retry composer install --no-interaction
+  - composer require laravel/framework ^${LARAVEL}.0
 
 script:
   - vendor/bin/phpunit -c phpunit.xml --coverage-clover=coverage.xml
