--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^7.0|^8.0",
         "postal/postal": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "orchestra/testbench": "^5.1"
+        "orchestra/testbench": "^5.1|^6.0"
     },
     "autoload": {
         "psr-4": {
