--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "homepage": "https://github.com/synergitech/laravel-postal",
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "laravel/framework": "^6.0|7.0|^8.0",
         "postal/postal": "^1.0"
     },
