--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,12 @@ jobs:
       fail-fast: false
       matrix:
         laravel: [6, 7, 8]
-        php: [7.3, 7.4, "8.0"]
+        php: [7.3, 7.4, "8.0", 8.1]
+        exclude:
+          - php: 8.1
+            laravel: 6
+          - php: 8.1
+            laravel: 7
 
     steps:
       - uses: actions/checkout@v2
