--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "laravel/framework": "^6.0|7.0|^8.0",
+        "laravel/framework": "^6.0|7.0|^8.0|^9.0",
         "postal/postal": "^1.0.1"
     },
     "require-dev": {
