--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
     "homepage": "https://github.com/synergitech/laravel-postal",
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "laravel/framework": "^6.0|7.0|^8.0",
+        "php": "^8.0",
+        "laravel/framework": "^9.0.1",
         "postal/postal": "^1.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "orchestra/testbench": "^4.0|^5.1|^6.0"
+        "orchestra/testbench": "^7.0"
     },
     "autoload": {
         "psr-4": {
