--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "orchestra/testbench": "^7.0"
+        "orchestra/testbench": "^7.0",
+        "nunomaduro/larastan": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -29,5 +30,11 @@
                 "SynergiTech\\Postal\\PostalServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "test": [
+            "phpunit",
+            "phpstan"
+        ]
     }
 }
