--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,10 +9,11 @@ jobs:
       fail-fast: false
       matrix:
         laravel: [9]
-        php: ["8.0", 8.1]
+        php: ["8.0", 8.1, 8.2]
 
     steps:
       - uses: actions/checkout@v2
 
       - name: test against Laravel ${{ matrix.laravel }} on PHP ${{ matrix.php }}
         run: docker build . --build-arg PHP_VERSION=${{ matrix.php }} --build-arg LARAVEL=${{ matrix.laravel }}
+
