--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,8 +8,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        laravel: [9]
+        laravel: [9, 10]
         php: ["8.0", 8.1, 8.2]
+        exclude:
+          - php: "8.0"
+            laravel: 10
 
     steps:
       - uses: actions/checkout@v3
