--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -36,11 +36,6 @@ parameters:
 			path: src/PostalNotificationChannel.php
 
 		-
-			message: "#^Access to an undefined property Postal\\\\SendResult\\:\\:\\$result\\.$#"
-			count: 1
-			path: src/PostalTransport.php
-
-		-
 			message: "#^Access to an undefined property object\\:\\:\\$body\\.$#"
 			count: 2
 			path: src/PostalTransport.php
@@ -95,3 +90,12 @@ parameters:
 			count: 1
 			path: src/PostalTransport.php
 
+		-
+			message: "#^Parameter \\#1 \\$content of method Postal\\\\Send\\\\Message\\:\\:htmlBody\\(\\) expects string, resource\\|string given\\.$#"
+			count: 1
+			path: src/PostalTransport.php
+
+		-
+			message: "#^Parameter \\#1 \\$content of method Postal\\\\Send\\\\Message\\:\\:plainBody\\(\\) expects string, resource\\|string given\\.$#"
+			count: 1
+			path: src/PostalTransport.php
