--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         laravel: [9, 10]
-        php: ["8.0", 8.1, 8.2]
+        php: ["8.0", 8.1, 8.2, 8.3]
         exclude:
           - php: "8.0"
             laravel: 10
