--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,15 +8,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        laravel: [9, 10]
-        php: ["8.0", 8.1, 8.2, 8.3]
-        exclude:
-          - php: "8.0"
-            laravel: 10
+        laravel: [10]
+        php: [8.1, 8.2, 8.3]
 
     steps:
       - uses: actions/checkout@v3
 
       - name: test against Laravel ${{ matrix.laravel }} on PHP ${{ matrix.php }}
         run: docker build . --build-arg PHP_VERSION=${{ matrix.php }} --build-arg LARAVEL=${{ matrix.laravel }}
-
