--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "postal/postal": "^2.0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0",
-        "orchestra/testbench": "^7.0|^8.0",
+        "phpunit/phpunit": "^10.0",
+        "orchestra/testbench": "^8.0",
         "nunomaduro/larastan": "^2.0"
     },
     "autoload": {
