--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        laravel: [10]
+        laravel: [10, 11]
         php: [8.1, 8.2, 8.3]
+        exclude:
+          - php: 8.1
+            laravel: 11
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: test against Laravel ${{ matrix.laravel }} on PHP ${{ matrix.php }}
         run: docker build . --build-arg PHP_VERSION=${{ matrix.php }} --build-arg LARAVEL=${{ matrix.laravel }}
