--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "laravel/framework": "^9.0.1|^10.0",
+        "laravel/framework": "^9.0.1|^10.0|^11.0",
         "postal/postal": "^2.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.0|^9.0",
         "nunomaduro/larastan": "^2.0"
     },
     "autoload": {
