--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,13 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        laravel: [10, 11, 12]
-        php: [8.1, 8.2, 8.3, 8.4]
-        exclude:
-          - php: 8.1
-            laravel: 11
-          - php: 8.1
-            laravel: 12
+        laravel: [11, 12]
+        php: [8.2, 8.3, 8.4]
 
     steps:
       - uses: actions/checkout@v4
