--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,10 @@
         "postal/postal": "^2.0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
+        "larastan/larastan": "^3.0",
         "orchestra/testbench": "^8.0|^9.0|^10.0",
-        "nunomaduro/larastan": "^2.0"
+        "phpstan/extension-installer": "^1.4",
+        "phpunit/phpunit": "^10.0|^11.0"
     },
     "autoload": {
         "psr-4": {
@@ -36,5 +37,10 @@
             "phpunit",
             "phpstan --memory-limit=1G"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     }
 }
